added calendar, hours, and tickets section

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <nav>
       <div class="nav-container">
         <div class="nav-logo-container">
-          <a href="/">
-            <svg></svg>
-          </a>
+          <h2>
+            KILLDEVIL <br />
+            ASYLUM
+            <a href="/">
+              <img class="nav-logo" src="/assets/splat.png" alt="" />
+            </a>
+          </h2>
         </div>
         <div class="nav-link-container">
           <a href="#">Home</a>
@@ -28,9 +32,12 @@
           id="video"
           src="/assets/vlc-record-2020-10-03-11h40m53s-haunted.mp4-.mp4"
           muted
+          <!--
           autoplay
-          loop
-        ></video>
+          --
+        >
+          loop >
+        </video>
       </div>
 
       <div class="content-wrapper">
@@ -44,6 +51,55 @@
         </div>
       </div>
     </section>
+
+    <div id="about">
+      <div class="award-logo-container">
+        <img class="awards" src="/assets/awards (2).png" alt="" />
+        <blockquote>
+          <p>"The Scariest Place on Earth"</p>
+          <footer>-Dread Rising Magazine</footer>
+        </blockquote>
+      </div>
+      <div class="calendar-flex-container">
+        <div class="calendar-text-container">
+          <h3>KILLDEVIL ASYLUM</h3>
+          <h1>Our patients get lonely. Dare pay them a visit?</h1>
+          <div class="calendar-categories">
+            <div class="hours category">
+              <div class="category-img">
+                <img src="/assets/clock.jpg" alt="" />
+              </div>
+              <div>
+                <h1>October 2020 Hours</h1>
+                <div class="hours">
+                  <h3>Friday-Sunday</h3>
+                  <p>8:00 PM to 1:00 AM</p>
+                </div>
+              </div>
+            </div>
+            <div class="pricing category">
+              <div class="category-img">
+                <img src="/assets/tickets.jpg" alt="" />
+              </div>
+              <div>
+                <h1>Tickets</h1>
+                <div class="tickets">
+                  <h3>Friday: <span>$10</span></h3>
+
+                  <h3>Saturday: <span>$15</span></h3>
+                  <h3>Sunday: <span>$15</span></h3>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="calendar-container">
+          <img class="calendar" src="/assets/October (1).png" />
+        </div>
+      </div>
+    </div>
+    <!-- <div class="spacer-div"></div> -->
 
     <script></script>
   </body>
