added history and footer

--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
           <h2>
             KILLDEVIL <br />
             ASYLUM
-            <a href="/">
+            <a href="index.html">
               <img class="nav-logo" src="/assets/splat.png" alt="" />
             </a>
           </h2>
         </div>
         <div class="nav-link-container">
-          <a href="#">Home</a>
-          <a href="#">Calendar</a>
+          <a href="index.html">Home</a>
+          <a href="#calendar">Calendar</a>
+          <a href="#history">History</a>
           <a href="#">Corn Maze</a>
         </div>
       </div>
@@ -32,22 +33,19 @@
           id="video"
           src="/assets/vlc-record-2020-10-03-11h40m53s-haunted.mp4-.mp4"
           muted
-          <!--
           autoplay
-          --
-        >
-          loop >
-        </video>
+        ></video>
       </div>
 
       <div class="content-wrapper">
         <div class="content">
           <h1>The Scariest Night of your Life.</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-            voluptate iusto beatae nam quidem quos reiciendis.?
+            This isn't just any institution. This is Killdevil. Rumor has it
+            something within is driving both patients AND visitors mad. Dare to
+            schedule a visit?
           </p>
-          <a class="btn" href="#"> Lorem Ipsum </a>
+          <a class="btn" href="#calendar"> Calendar </a>
         </div>
       </div>
     </section>
@@ -60,11 +58,41 @@
           <footer>-Dread Rising Magazine</footer>
         </blockquote>
       </div>
-      <div class="calendar-flex-container">
-        <div class="calendar-text-container">
+      <div id="history" class="details">
+        <div class="details-img">
+          <img src="/assets/asylum.jpg" alt="" />
+        </div>
+
+        <div class="text">
+          <p>
+            Killdevil, Maine's most notorious hospital for the criminally
+            insane, was forced to close its doors nearly 60 years ago due to
+            numerous homicides. Rumor has it that no other institution was
+            willing to house the patients, and they remained inside the
+            abandoned sanitarium for the rest of their lives.
+          </p>
+          <br />
+          <p>
+            In 2018, Killdevil Asylum reopened its doors and began taking new
+            patients. There have since been a number of visitors who've gone
+            missing, their last known whereabouts Killdevil. Could the ghosts of
+            the those abandoned years prior be to blame?
+          </p>
+          <br />
+          <p>
+            Officials are threatening to once again shut Killdevil's doors and
+            bar the public. Dare to visit, while you can?
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div id="visit">
+      <div class="visit-flex-container">
+        <div class="visit-text-container">
           <h3>KILLDEVIL ASYLUM</h3>
           <h1>Our patients get lonely. Dare pay them a visit?</h1>
-          <div class="calendar-categories">
+          <div class="visit-categories">
             <div class="hours category">
               <div class="category-img">
                 <img src="/assets/clock.jpg" alt="" />
@@ -94,9 +122,18 @@
           </div>
         </div>
 
-        <div class="calendar-container">
+        <div id="calendar" class="calendar-container">
           <img class="calendar" src="/assets/October (1).png" />
         </div>
+      </div>
+      <div class="location">
+        <p class="address">
+          Killdeer Asylum <br />249 Lord Rd, Lebanon, ME 04027
+        </p>
+        <p>
+          Created for <a href="https://www.thecodecavern.com">Codecavern</a> web
+          jam
+        </p>
       </div>
     </div>
     <!-- <div class="spacer-div"></div> -->
