--- a/index.html
+++ b/index.html
@@ -4,30 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+    <title>KillDevil Asylum</title>
   </head>
   <body>
     <nav>
       <div class="nav-container">
         <div class="nav-logo-container">
-          <h2>
-            KILLDEVIL <br />
-            ASYLUM
-            <a href="index.html">
+          <a href="index.html">
+            <h2>
+              KILLDEVIL <br />
+              ASYLUM
+
               <img class="nav-logo" src="/assets/splat.png" alt="" />
-            </a>
-          </h2>
+            </h2>
+          </a>
         </div>
         <div class="nav-link-container">
           <a href="index.html">Home</a>
           <a href="#calendar">Calendar</a>
           <a href="#history">History</a>
-          <a href="#">Corn Maze</a>
+          <a href="corn-maze.html">Corn Maze</a>
         </div>
       </div>
     </nav>
 
-    <section class="video-section">
+    <div class="video-section">
       <div class="video-container">
         <video
           id="video"
@@ -41,14 +42,14 @@
         <div class="content">
           <h1>The Scariest Night of your Life.</h1>
           <p>
-            This isn't just any institution. This is Killdevil. Rumor has it
+            This isn't just any institution. This is KillDevil. Rumor has it
             something within is driving both patients AND visitors mad. Dare to
             schedule a visit?
           </p>
           <a class="btn" href="#calendar"> Calendar </a>
         </div>
       </div>
-    </section>
+    </div>
 
     <div id="about">
       <div class="award-logo-container">
@@ -58,14 +59,15 @@
           <footer>-Dread Rising Magazine</footer>
         </blockquote>
       </div>
-      <div id="history" class="details">
+      <h1 id="history" class="history-header">History</h1>
+      <div class="details">
         <div class="details-img">
           <img src="/assets/asylum.jpg" alt="" />
         </div>
 
         <div class="text">
           <p>
-            Killdevil, Maine's most notorious hospital for the criminally
+            KillDevil, Maine's most notorious hospital for the criminally
             insane, was forced to close its doors nearly 60 years ago due to
             numerous homicides. Rumor has it that no other institution was
             willing to house the patients, and they remained inside the
@@ -73,14 +75,14 @@
           </p>
           <br />
           <p>
-            In 2018, Killdevil Asylum reopened its doors and began taking new
+            In 2018, KillDevil Asylum reopened its doors and began taking new
             patients. There have since been a number of visitors who've gone
             missing, their last known whereabouts Killdevil. Could the ghosts of
             the those abandoned years prior be to blame?
           </p>
           <br />
           <p>
-            Officials are threatening to once again shut Killdevil's doors and
+            Officials are threatening to once again shut KillDevil's doors and
             bar the public. Dare to visit, while you can?
           </p>
         </div>
@@ -128,15 +130,13 @@
       </div>
       <div class="location">
         <p class="address">
-          Killdeer Asylum <br />249 Lord Rd, Lebanon, ME 04027
+          KillDevil Asylum <br />249 Lord Rd, Lebanon, ME 04027
         </p>
         <p>
-          Created for <a href="https://www.thecodecavern.com">Codecavern</a> web
-          jam
+          Sponsored by <a href="https://www.thecodecavern.com">Codecavern</a>
         </p>
       </div>
     </div>
-    <!-- <div class="spacer-div"></div> -->
 
     <script></script>
   </body>
