padding change logo container

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           src="/assets/vlc-record-2020-10-03-11h40m53s-haunted.mp4-.mp4"
           muted
           autoplay
+          loop
         ></video>
       </div>
 
