had wrong path to images in html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="video-container">
         <video
           id="video"
-          src="/assets/vlc-record-2020-10-03-11h40m53s-haunted.mp4-.mp4"
+          src="assets/vlc-record-2020-10-03-11h40m53s-haunted.mp4-.mp4"
           muted
           autoplay
           loop
@@ -54,7 +54,7 @@
 
     <div id="about">
       <div class="award-logo-container">
-        <img class="awards" src="/assets/awards (2).png" alt="" />
+        <img class="awards" src="assets/awards (2).png" alt="" />
         <blockquote>
           <p>"The Scariest Place on Earth"</p>
           <footer>-Dread Rising Magazine</footer>
@@ -63,7 +63,7 @@
       <h1 id="history" class="history-header">History</h1>
       <div class="details">
         <div class="details-img">
-          <img src="/assets/asylum.jpg" alt="" />
+          <img src="assets/asylum.jpg" alt="" />
         </div>
 
         <div class="text">
@@ -98,7 +98,7 @@
           <div class="visit-categories">
             <div class="hours category">
               <div class="category-img">
-                <img src="/assets/clock.jpg" alt="" />
+                <img src="assets/clock.jpg" alt="" />
               </div>
               <div>
                 <h1>October 2020 Hours</h1>
@@ -110,7 +110,7 @@
             </div>
             <div class="pricing category">
               <div class="category-img">
-                <img src="/assets/tickets.jpg" alt="" />
+                <img src="assets/tickets.jpg" alt="" />
               </div>
               <div>
                 <h1>Tickets</h1>
@@ -126,7 +126,7 @@
         </div>
 
         <div id="calendar" class="calendar-container">
-          <img class="calendar" src="/assets/October (1).png" />
+          <img class="calendar" src="assets/October (1).png" />
         </div>
       </div>
       <div class="location">
