--- a/corn-maze.html
+++ b/corn-maze.html
@@ -15,7 +15,7 @@
               KILLDEVIL <br />
               ASYLUM
 
-              <img class="nav-logo" src="/assets/splat.png" alt="" />
+              <img class="nav-logo" src="assets/splat.png" alt="" />
             </h2>
           </a>
         </div>
@@ -35,7 +35,7 @@
           <h1 class="corn-header-text">New KillDevil Corn Maze!</h1>
         </div>
         <div class="corn-img">
-          <img src="/assets/corn.jpg" alt="" />
+          <img src="assets/corn.jpg" alt="" />
         </div>
       </div>
       <div class="corn-body">
@@ -58,7 +58,7 @@
       <div class="corn-categories">
         <div class="pricing category">
           <div class="category-img">
-            <img src="/assets/tickets.jpg" alt="" />
+            <img src="assets/tickets.jpg" alt="" />
           </div>
           <div>
             <h1>Tickets</h1>
@@ -72,7 +72,7 @@
 
         <div class="hours category">
           <div class="category-img">
-            <img src="/assets/clock.jpg" alt="" />
+            <img src="assets/clock.jpg" alt="" />
           </div>
           <div>
             <h1>Hours</h1>
