had wrong path to images in html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               KILLDEVIL <br />
               ASYLUM
 
-              <img class="nav-logo" src="/assets/splat.png" alt="" />
+              <img class="nav-logo" src="assets/splat.png" alt="" />
             </h2>
           </a>
         </div>
