--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/ff7801964a.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles.css" />
     <title>KillDevil Asylum</title>
   </head>
@@ -20,10 +24,15 @@
           </a>
         </div>
         <div class="nav-link-container">
-          <a href="index.html">Home</a>
-          <a href="#calendar">Calendar</a>
-          <a href="#history">History</a>
-          <a href="corn-maze.html">Corn Maze</a>
+          <div class="menu-icon">
+            <a id="hamburger" href="#"><i class="fa fa-bars fa-lg"></i></a>
+          </div>
+          <ul class="menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#calendar">Calendar</a></li>
+            <li><a href="#history">History</a></li>
+            <li><a href="corn-maze.html">Corn Maze</a></li>
+          </ul>
         </div>
       </div>
     </nav>
@@ -78,7 +87,7 @@
           <p>
             In 2018, KillDevil Asylum reopened its doors and began taking new
             patients. There have since been a number of visitors who've gone
-            missing, their last known whereabouts Killdevil. Could the ghosts of
+            missing, their last known whereabouts KillDevil. Could the ghosts of
             the those abandoned years prior be to blame?
           </p>
           <br />
@@ -94,7 +103,7 @@
       <div class="visit-flex-container">
         <div class="visit-text-container">
           <h3>KILLDEVIL ASYLUM</h3>
-          <h1>Our patients get lonely. Dare pay them a visit?</h1>
+          <h1>Our patients get lonely. Care to pay them a visit?</h1>
           <div class="visit-categories">
             <div class="hours category">
               <div class="category-img">
@@ -131,14 +140,14 @@
       </div>
       <div class="location">
         <p class="address">
-          KillDevil Asylum <br />249 Lord Rd, Lebanon, ME 04027
+          KillDevil Asylum <br />249 Lord Rd, Kill Devil Hills, ME 04026
         </p>
         <p>
-          Sponsored by <a href="https://www.thecodecavern.com">Codecavern</a>
+          Sponsored by <a href="https://www.thecodecavern.com">CodeCavern</a>
         </p>
       </div>
     </div>
 
-    <script></script>
+    <script src="app.js"></script>
   </body>
 </html>
