added different icon for when hamburger open

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         </div>
         <div class="nav-link-container">
           <div class="menu-icon">
-            <a id="hamburger" href="#"><i class="fa fa-bars fa-lg"></i></a>
+            <a id="hamburger" href="#"
+              ><i id="hamburger-icon" class="fa fa-bars fa-lg"></i
+            ></a>
           </div>
           <ul class="menu">
             <li><a href="index.html">Home</a></li>
