adjusted padding between about and visit sections to match, changed address

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       </div>
       <div class="location">
         <p class="address">
-          KillDevil Asylum <br />249 Lord Rd, Kill Devil Hills, ME 04026
+          KillDevil Asylum <br />249 Serpent Dr, Kill Devil Hills, ME 04026
         </p>
         <p>
           Sponsored by <a href="https://www.thecodecavern.com">CodeCavern</a>
