--- a/corn-maze.html
+++ b/corn-maze.html
@@ -26,7 +26,9 @@
 
         <div class="nav-link-container">
           <div class="menu-icon">
-            <a id="hamburger" href="#"><i class="fas fa-bars"></i></a>
+            <a id="hamburger" href="#"
+              ><i id="hamburger-icon" class="fas fa-bars"></i
+            ></a>
           </div>
           <ul class="menu">
             <li><a href="index.html">Home</a></li>
