--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="nav-link-container">
           <div class="menu-icon">
-            <a id="hamburger" href="#"
+            <a href="#" id="hamburger"
               ><i id="hamburger-icon" class="fa fa-bars fa-lg"></i
             ></a>
           </div>
