enlarged hamburger icon and padding, set z index higher than corn header so can click on links

--- a/corn-maze.html
+++ b/corn-maze.html
@@ -27,14 +27,16 @@
         <div class="nav-link-container">
           <div class="menu-icon">
             <a id="hamburger" href="#"
-              ><i id="hamburger-icon" class="fas fa-bars"></i
+              ><i id="hamburger-icon" class="fas fa-bars fa-2x"></i
             ></a>
           </div>
           <ul class="menu">
             <li><a href="index.html">Home</a></li>
 
             <li><a href="index.html#calendar">Calendar</a></li>
+
             <li><a href="index.html#history">History</a></li>
+
             <li><a href="corn-maze.html">Corn Maze</a></li>
           </ul>
         </div>
