--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="nav-link-container">
           <div class="menu-icon">
             <a href="#" id="hamburger"
-              ><i id="hamburger-icon" class="fa fa-bars fa-lg"></i
+              ><i id="hamburger-icon" class="fa fa-bars fa-2x"></i
             ></a>
           </div>
           <ul class="menu">
@@ -71,7 +71,7 @@
           <footer>-Dread Rising Magazine</footer>
         </blockquote>
       </div>
-      <h1 id="history" class="history-header">History</h1>
+      <h1 id="history" name="history" class="history-header">History</h1>
       <div class="details">
         <div class="details-img">
           <img src="assets/asylum.jpg" alt="" />
@@ -136,7 +136,7 @@
           </div>
         </div>
 
-        <div id="calendar" class="calendar-container">
+        <div id="calendar" class="calendar-container" name="calendar">
           <img class="calendar" src="assets/October (1).png" />
         </div>
       </div>
