button font annd color change. Added heading to calendar section

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
     </div>
 
     <div id="visit">
+      <h1 class="calendar-header">Calendar</h1>
       <div class="visit-flex-container">
         <div class="visit-text-container">
-          <h3>KILLDEVIL ASYLUM</h3>
           <h1>Our patients get lonely. Care to pay them a visit?</h1>
           <div class="visit-categories">
             <div class="hours category">
